fix aos on leaders a spacing on h2 heading

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22578,6 +22578,9 @@ section.page--media .search-member-directory {
   position: relative;
   padding-top: 40px;
 }
+.page-chapter--events .main-content .events-section .row .col-lg-12 > h2 {
+  margin-bottom: 60px !important;
+}
 .page-chapter--leadership .main-content {
   position: relative;
   padding-top: 40px;
