--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -43,6 +43,15 @@
             // padding-top: 0;
             // margin-top: -60px;
             padding-top: 40px;
+            .events-section {
+                .row {
+                    .col-lg-12 {
+                        >h2 {
+                            margin-bottom: 60px !important;
+                        }
+                    }
+                }
+            }
         }
     }
     &--leadership {
